servobox (0.2.0) unstable; urgency=medium

  * Add RT performance modes: --performance (lock CPU frequencies) and --extreme (+ turbo disable)
  * Add halt polling tuning: 50μs (balanced), 100μs (extreme) for lower vCPU wake-up latency
  * Add comprehensive RT configuration documentation (21 optimization steps)
  * Add experimental tuning guide for advanced BIOS and host configuration
  * Default mode is "balanced" (~4μs avg, ~100μs max, recommended for all users)

 -- Konstantinos Vasios <konstantinos.vasios@gmail.com>  Thu, 12 Nov 2025 12:00:00 +0000

servobox (0.1.3) unstable; urgency=medium

  * Fix critical network setup boot delays - VMs now boot in 5-10s instead of 30-60s
  * Add optional: true to macvtap NIC netplan configs to prevent boot blocking
  * Implement first-boot flag to skip expensive cloud-init operations on subsequent boots
  * Add systemd service (servobox-configure-macvtap.service) for reliable macvtap configuration
  * Fix VM IP assignment to avoid conflicts between host and VM in same subnet
  * Upgrade to virtio-net with multi-queue + vhost-net RT priority (75)
  * Remove guest CPU isolation restrictions - guest processes can use all vCPUs freely
  * Add timeouts to virsh commands and improve error handling
  * Fix hanging operations with non-interactive sudo and clear error messages

 -- Konstantinos Vasios <konstantinos.vasios@gmail.com>  Thu, 07 Nov 2025 12:00:00 +0000

servobox (0.1.2) unstable; urgency=medium

  * Fix critical VM detection issue after closing/reopening terminal
  * Fix "Permission denied" errors when creating seed.iso in new terminals
  * Replace unreliable group membership check with actual libvirt connectivity test
  * Make current user owner of VM_DIR for immediate write access
  * Add ACLs for both user and kvm group on VM directories
  * Create common.sh with shared virsh_cmd() function to eliminate code duplication
  * Fix package tracking cleanup - servobox destroy now removes tracking files