@@ -1,0 +1,8 @@
+# Franky for Franka Research 3 (FER) package recipe
+name="franky-fer"
+version="1.1.1"
+description="Franky - High-Level Control Library for Franka Research 3 (FER) via micromamba"
+build_type="custom"
+install_method="custom"
+dependencies=""
+
