@@ -1,0 +1,8 @@
+# Franky for Franka Panda Gen1 package recipe
+name="franky-gen1"
+version="1.1.1"
+description="Franky - High-Level Control Library for Franka Panda Gen1 via micromamba"
+build_type="custom"
+install_method="custom"
+dependencies=""
+
